--- a/project_tracker/templates/project/dashboard.html
+++ b/project_tracker/templates/project/dashboard.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Dashboard{% endblock %}</title>
+    <!-- Bootstrap CSS and Datenpicker CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css" rel="stylesheet">
     <style>
@@ -132,6 +133,7 @@
     cursor: pointer;
   }
     </style>
+    {% block styles %}{% endblock %}
 </head>
 <div class="container-fluid">
     <div class="row">
