--- a/project_tracker/templates/project/edit_project.html
+++ b/project_tracker/templates/project/edit_project.html
@@ -82,25 +82,27 @@
     <form method="post" id="project-form">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit" class="btn btn-primary" id="save-button" style="display:none;">Save Changes</button>
+        <button type="submit" name="action" value="edit_project" class="btn btn-primary btn-save-change"
+            id="save-button">Save Changes</button>
         <button type="button" class="btn btn-secondary" id="cancel-edit-button" style="display:none;">Cancel</button>
     </form>
 
     <h3 class="mt-4">Tasks</h3>
-    {% if not has_tasks %}
-    <p>No tasks created for this project.</p>
-    {% else %}
     {% if is_owner %}
     <button id="add-task" class="btn btn-primary mb-3" style="display:none;">Add New Task</button>
     <div id="task-form-container" style="display:none;">
         <form method="post" id="task-form">
             {% csrf_token %}
             {{ task_form.as_p }}
-            <button type="submit" class="btn btn-primary">Save Task</button>
+            <button type="submit" name="action" value="add_task" class="btn btn-primary btn-save-task">Save
+                Task</button>
             <button type="button" class="btn btn-secondary" id="cancel-task-button">Cancel</button>
         </form>
     </div>
     {% endif %}
+    {% if not has_tasks %}
+    <p>No tasks created for this project.</p>
+    {% else %}
     <div id="tasks-container">
         {% for task in tasks %}
         <div class="task-card">
@@ -172,7 +174,7 @@
             $('#project-form input, #project-form select, #project-form textarea').prop('disabled', false);
             $('#edit-button').hide();
             $('#go-to-dashboard-button').hide();
-            $('#save-button').show();
+            $('.btn-save-change').show();
             $('#add-task').show();
             $('#cancel-edit-button').show();
             $('.task-actions').show();
@@ -181,7 +183,7 @@
         // Show task form on 'add task button' click
         $('#add-task').click(function () {
             $('#task-form-container').show();
-            $('#save-button').hide();
+            $('.btn-save-change').hide();
             $('#add-task').hide();
             $('#project-form input, #project-form select, #project-form textarea').prop('disabled', true);
             $('.task-actions').hide();
@@ -194,7 +196,7 @@
             $('#project-form')[0].reset();
             $('#project-form input, #project-form select, #project-form textarea').prop('disabled', true);
             $('#edit-button').show();
-            $('#save-button').hide();
+            $('.btn-save-change').hide();
             $('#cancel-edit-button').hide();
             $('#add-task').hide();
             $('#task-form-container').hide();
