--- a/project_tracker/templates/project/edit_project.html
+++ b/project_tracker/templates/project/edit_project.html
@@ -15,6 +15,30 @@
     .form-group label {
         font-weight: bold;
     }
+    /* Additional styles to ensure same view on mobile as on desktop */
+    .form-group {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .form-group label {
+        order: -1;
+        margin-bottom: 0.5rem;
+    }
+
+    .form-group textarea {
+        width: 100%;
+        max-width: 100%;
+    }
+
+    /* Additional styles to ensure full width */
+    #project-form .form-group {
+        width: 100%;
+    }
+
+    #project-form .form-control {
+        width: 100%;
+    }
 
     .form-group input,
     .form-group select,
@@ -60,8 +84,6 @@
 </style>
 {% endblock %}
 
-{% block title %}Edit Project{% endblock %}
-
 {% block middle_column %}
 {% for message in messages %}
 <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
@@ -73,7 +95,7 @@
 {% endfor %}
 
 <div class="container">
-    <h3 class="form-title">Edit Project</h3>
+    <h3 class="form-title">Details of "{{ project.title }}"</h3>
     {% if is_owner %}
     <a id="go-to-dashboard-button" class="btn btn-secondary btn-back nav-link mb-3" href="/dashboard">Go to
         Dashboard</a>
@@ -81,19 +103,53 @@
     {% endif %}
     <form method="post" id="project-form">
         {% csrf_token %}
-        {{ form.as_p }}
+        <div class="form-group">
+            <label for="id_title">Title</label>
+            {{ form.title }}
+        </div>
+        <div class="form-group">
+            <label for="id_description">Description</label>
+            {{ form.description }}
+        </div>
+        <div class="form-group">
+            <label for="id_due_date">Due Date</label>
+            {{ form.due_date }}
+        </div>
+        <div class="form-group">
+            <label for="id_state">State</label>
+            {{ form.state }}
+        </div>
+        <div class="form-group">
+            <label for="id_is_public">Is Public</label>
+            {{ form.is_public }}
+        </div>
         <button type="submit" name="action" value="edit_project" class="btn btn-primary btn-save-change"
-            id="save-button">Save Changes</button>
+            id="save-button" style="display:none;">Save Changes</button>
         <button type="button" class="btn btn-secondary" id="cancel-edit-button" style="display:none;">Cancel</button>
     </form>
 
-    <h3 class="mt-4">Tasks</h3>
+    <h3 class="mt-4" id="task_name">Tasks</h3>
     {% if is_owner %}
     <button id="add-task" class="btn btn-primary mb-3" style="display:none;">Add New Task</button>
     <div id="task-form-container" style="display:none;">
         <form method="post" id="task-form">
             {% csrf_token %}
-            {{ task_form.as_p }}
+            <div class="form-group">
+                <label for="id_title">Title</label>
+                {{ task_form.title }}
+            </div>
+            <div class="form-group">
+                <label for="id_description">Description</label>
+                {{ task_form.description }}
+            </div>
+            <div class="form-group">
+                <label for="id_due_date">Due Date</label>
+                {{ task_form.due_date }}
+            </div>
+            <div class="form-group">
+                <label for="id-state">State</label>
+                {{ task_form.status }}
+            </div>
             <button type="submit" name="action" value="add_task" class="btn btn-primary btn-save-task">Save
                 Task</button>
             <button type="button" class="btn btn-secondary" id="cancel-task-button">Cancel</button>
@@ -188,6 +244,7 @@
             $('#project-form input, #project-form select, #project-form textarea').prop('disabled', true);
             $('.task-actions').hide();
             $('#cancel-edit-button').hide();
+            $('#task_name').text('Add New Task');
 
         });
 
@@ -196,6 +253,7 @@
             $('#project-form')[0].reset();
             $('#project-form input, #project-form select, #project-form textarea').prop('disabled', true);
             $('#edit-button').show();
+            $('#go-to-dashboard-button').show();
             $('.btn-save-change').hide();
             $('#cancel-edit-button').hide();
             $('#add-task').hide();
@@ -208,6 +266,12 @@
             $('#task-form')[0].reset();
             $('#task-form-container').hide();
             $('#edit-button').show();
+            $('#task_name').text('Tasks');
+        });
+
+        // Save adding task
+        $('.btn-save-task').click(function () {
+            $('#task_name').text('Tasks');
         });
 
         // Change task status
