--- a/project_tracker/templates/project/project_create.html
+++ b/project_tracker/templates/project/project_create.html
@@ -94,7 +94,7 @@
             {{ form.is_public }}
         </div>
         <button type="submit" class="btn btn-primary">Create Project</button>
-        <a class="btn btn-secondary" id="cancel-button" href="/dashboard">Cancel</a>
+        <a class="btn btn-secondary" id="cancel-button" href="{{ dashboard_url }}">Cancel</a>
     </form>
 </div>
     {% endblock %}
