--- a/project_tracker/templates/profiles/profiles.html
+++ b/project_tracker/templates/profiles/profiles.html
@@ -41,8 +41,7 @@
             box-shadow: none;
         }
 
-        .btn-primary,
-        .btn-danger {
+        .btn {
             border-radius: 10px;
             width: 100%;
         }
@@ -64,6 +63,14 @@
         .profile-header h3 {
             margin-left: 20px;
             margin-bottom: 0;
+        }
+
+        .btn-secondary {
+            background-color: #f26500;
+        }
+
+        .btn-secondary:hover {
+            background-color: #b64c00;
         }
     </style>
 </head>
@@ -108,8 +115,12 @@
                 {{ user_form.password2 }}
                 <small class="text-danger" id="password2-error"></small>
             </div>
-            <button type="submit" class="btn btn-primary">Update Profile</button>
+            <button type="submit" class="btn btn-primary save-button">Update Profile</button>
         </form>
+        {% if show_dashboard_button %}
+        <a type="button" class="btn btn-secondary" href="{% url 'dashboard' %}" style="margin-top: 20px;">Go to
+            Dashboard</a>
+        {% endif %}
         <form method="post" action="{% url 'delete_account' %}" style="margin-top: 20px;">
             {% csrf_token %}
             <button type="submit" class="btn btn-danger">Delete Account</button>
