--- a/project_tracker/templates/project/dashboard.html
+++ b/project_tracker/templates/project/dashboard.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -7,7 +8,8 @@
     <title>{% block title %}Dashboard{% endblock %}</title>
     <!-- Bootstrap CSS and Datenpicker CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css"
+        rel="stylesheet">
     <style>
         body {
             background-color: #e8f5e9;
@@ -98,92 +100,415 @@
             margin-right: 15px;
         }
 
-        .modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-  }
+        .close {
+            color: #aaa;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+        }
 
-  .modal-content {
-    background-color: #fefefe;
-    margin: 15% auto; /* 15% from the top and centered */
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
-  }
+        .close:hover,
+        .close:focus {
+            color: black;
+            text-decoration: none;
+            cursor: pointer;
+        }
 
-  .close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-  }
+        .top-row {
+            padding-top: 20px;
+            /* Add more space at the top */
+        }
 
-  .close:hover,
-  .close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-  }
+        .profile-section {
+            display: flex;
+            align-items: center;
+        }
+
+        .profile-pic-container {
+            background-color: #ffffff;
+            border-radius: 15px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            padding: 10px;
+            margin-right: 20px;
+        }
+
+        .profile-pic {
+            width: 80px;
+            height: 80px;
+            border-radius: 50%;
+            object-fit: cover;
+            cursor: pointer;
+            transition: opacity 0.3s ease;
+        }
+
+        .profile-pic:hover {
+            opacity: 0.8;
+        }
+
+        .greeting-container {
+            width: 100%;
+            display: flex;
+            flex-wrap: nowrap;
+            flex-direction: column;
+        }
+
+        .greeting-container h4 {
+            margin: 0;
+            line-height: 1.2;
+        }
+
+        /* Adjust the button styles */
+        .dashboard-buttons {
+            display: flex;
+            justify-content: flex-end;
+            align-items: center;
+
+        }
+
+        .btn-dashboard {
+            margin-left: 10px;
+        }
+
+        /* Styles for the profile picture card and responsive design */
+        .top-row {
+            padding-top: 20px;
+        }
+
+        .profile-section {
+            display: flex;
+            align-items: center;
+        }
+
+        .profile-pic-container {
+            background-color: #ffffff;
+            border-radius: 15px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            padding: 10px;
+            margin-right: 20px;
+        }
+
+        .profile-pic {
+            width: 80px;
+            height: 80px;
+            border-radius: 50%;
+            object-fit: cover;
+            cursor: pointer;
+            transition: opacity 0.3s ease;
+        }
+
+        .profile-pic:hover {
+            opacity: 0.8;
+        }
+
+        .greeting-container {
+            display: flex;
+            flex-direction: column;
+        }
+
+        .greeting-container h4 {
+            margin: 0;
+            line-height: 1.2;
+        }
+
+        .btn-wrapper {
+            display: flex;
+            justify-content: flex-end;
+            align-items: center;
+        }
+
+        .dashboard-buttons {
+            display: flex;
+            justify-content: flex-end;
+            align-items: center;
+        }
+
+        .btn-dashboard {
+            margin-left: 10px;
+        }
+
+        .nav-wrapper {
+            position: relative;
+        }
+
+        /* Navbar styles */
+        .navbar {
+            padding: 0.5rem 1rem;
+        }
+
+        .navbar-collapse {
+            position: absolute;
+            top: -30px;
+            right: 0;
+            left: -70px;
+            transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
+            transform: translateY(-10px);
+            opacity: 0;
+            visibility: hidden;
+            z-index: 1000;
+        }
+
+        .navbar-collapse.show {
+            transform: translateY(0);
+            opacity: 1;
+            visibility: visible;
+        }
+
+        .navbar-toggler {
+            border: none;
+            background: transparent;
+            transition: opacity 0.3s ease-in-out;
+            z-index: 1001;
+        }
+
+        .navbar-toggler:focus {
+            outline: none;
+            box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, .25);
+        }
+
+        .navbar-toggler.hidden {
+            opacity: 0;
+            pointer-events: none;
+        }
+
+        .navbar-nav {
+            padding: 0.25rem;
+            top: -50px;
+            background-color: #ffffff;
+            border-radius: 15px;
+        }
+
+        .nav-item {
+            white-space: nowrap;
+        }
+
+        .nav-link {
+            color: #333;
+            transition: color 0.3s ease-in-out;
+            font-size: 1.1em;
+            padding: 0.25rem;
+        }
+
+        .nav-link:hover,
+        .nav-link:focus {
+            color: #007bff;
+        }
+
+        @media (min-width: 768px) {
+            .navbar-collapse {
+                position: static;
+                background-color: transparent;
+                box-shadow: none;
+                transform: none;
+                opacity: 1;
+                visibility: visible;
+            }
+
+            .navbar-nav {
+                flex-direction: row;
+                padding: 0;
+            }
+
+            .nav-item {
+                margin-bottom: 0;
+                margin-right: 1rem;
+            }
+
+            .navbar-toggler {
+                display: none;
+            }
+        }
+
+        /* Styles for responsive design */
+        @media (max-width: 767px) {
+            .navbar-collapse:not(.show) {
+                display: none;
+            }
+
+            .top-row {
+                flex-direction: row;
+                justify-content: space-between;
+                align-items: center;
+                flex-wrap: nowrap;
+            }
+
+            .dashboard-buttons {
+                display: none;
+            }
+        }
+
+        /* Styles for the navbar between 768px and 880px*/
+        @media (min-width: 768px) and (max-width: 880px) {
+            .dashboard-buttons {
+                padding-right: 0;
+            }
+        }
     </style>
     {% block styles %}{% endblock %}
 </head>
-<div class="container-fluid">
-    <div class="row">
-        <!-- Left Column, Miscellaneous Icons --> 
-        <div class="col-md-1 column text-center">
-            <img src="profile.jpg" alt="Profile Picture" class="profile-pic">
-            <div class="icon">&#x1F4C8;</div> <!-- Dashboard Icon -->
-            <div class="icon">&#x1F511;</div> <!-- Logout Icon -->
-        </div>
 
-        <!-- Middle Column, Projects and Modal -->
-        <div class="col-md-8 column">
-            {% block middle_column %}
-            {% endblock %}
-        </div>
-        <!-- Modal -->
-        <div id="projectModal" class="modal">
-            <div class="modal-content">
-                <span class="close">&times;</span>
-                <div id="modal-body-content">
-                    <!-- Form content will be loaded here -->
+<body>
+    <div class="container-fluid">
+        <!-- Top row -->
+        <div class="row top-row">
+            <div class="col-md-6">
+                <div class="profile-section">
+                    <div class="profile-pic-container">
+                        <a href="{% url 'profile' %}">
+                            <img src="{% if profile_picture_url %}{{ profile_picture_url }}{% else %}{% static 'avatar.webp' %}{% endif %}"
+                                alt="Profile Picture" class="profile-pic">
+                        </a>
+                    </div>
+                    <div class="greeting-container">
+                        <h4 id="greeting"></h4>
+                        <h4>{{ user.first_name }}</h4>
+                    </div>
                 </div>
+            </div>
+            <div class="col-md-6 btn-wrapper">
+                <nav class="navbar navbar-expand-md navbar-light">
+                    <button class="navbar-toggler" type="button" aria-controls="navbarNav" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ dashboard_url }}">Dashboard</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Public Dashboard</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ signout_url }}">Sign Out</a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
             </div>
         </div>
 
-        <!-- Right Column, Comment section -->
-        <div class="col-md-3 column comments-section">
-            <h4>Comments</h4>
-            <div class="comment-card">
-                <p><strong>User:</strong> Comment content...</p>
+        <div class="row">
+            <!-- Middle Column, Projects (3/4 width) -->
+            <div class="col-md-9 column">
+                {% block middle_column %}
+                <!-- Your existing middle column content -->
+                {% endblock %}
+            </div>
+
+            <!-- Right Column, Comment section (1/4 width) -->
+            <div class="col-md-3 column comments-section">
+                <h4>Comments</h4>
+                <div class="comment-card">
+                    <p><strong>User:</strong> Comment content...</p>
+                </div>
+                <!-- Add more comment cards as needed -->
             </div>
         </div>
     </div>
-</div>
- <!-- Bootstrap and jQuery JS -->
-<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
-<script>
-    // Display current date
-    document.getElementById('current-date').textContent = new Date().toLocaleDateString();
+    <!-- Bootstrap and jQuery JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
+    <script>
+        // Navbar toggler
+        document.addEventListener('DOMContentLoaded', function () {
+            const navbarToggler = document.querySelector('.navbar-toggler');
+            const navbarCollapse = document.querySelector('.navbar-collapse');
 
-    // Toggle between grid and table view
-    document.getElementById('viewSwitch').addEventListener('change', function () {
-        const isChecked = this.checked;
-        document.getElementById('projects-container').style.display = isChecked ? 'none' : 'flex';
-        document.getElementById('projects-table').style.display = isChecked ? 'table' : 'none';
-    });
-</script>
-{% block extra_js %}{% endblock %}
+            navbarToggler.addEventListener('click', function (e) {
+                e.preventDefault();
+                e.stopPropagation();
+
+                navbarCollapse.classList.toggle('show');
+                navbarToggler.classList.toggle('hidden');
+
+                const isExpanded = navbarCollapse.classList.contains('show');
+                navbarToggler.setAttribute('aria-expanded', isExpanded);
+            });
+
+            // Close navbar and show toggler when clicking outside
+            document.addEventListener('click', function (e) {
+                if (!e.target.closest('.navbar')) {
+                    navbarCollapse.classList.remove('show');
+                    navbarToggler.classList.remove('hidden');
+                    navbarToggler.setAttribute('aria-expanded', 'false');
+                }
+            });
+
+            // Handle escape key to close navbar
+            document.addEventListener('keydown', function (e) {
+                if (e.key === 'Escape' && navbarCollapse.classList.contains('show')) {
+                    navbarCollapse.classList.remove('show');
+                    navbarToggler.classList.remove('hidden');
+                    navbarToggler.setAttribute('aria-expanded', 'false');
+                    navbarToggler.focus();
+                }
+            });
+        });
+
+        // Display greeting based on time of day
+        function setGreeting() {
+            const greetingElement = document.getElementById('greeting');
+            if (greetingElement) {
+                const hour = new Date().getHours();
+                let greeting;
+
+                if (hour >= 5 && hour < 12) {
+                    greeting = 'Good Morning, ';
+                } else if (hour >= 12 && hour < 18) {
+                    greeting = 'Good Afternoon, ';
+                } else if (hour >= 18 && hour < 22) {
+                    greeting = 'Good Evening, ';
+                } else {
+                    greeting = 'Good Night, ';
+                }
+
+                greetingElement.textContent = greeting;;
+            }
+
+        }
+
+        // Initialize datepicker
+        $(document).ready(function () {
+            $('#id_due_date').datepicker({
+                format: 'yyyy-mm-dd',
+                autoclose: true,
+                todayHighlight: true
+            });
+
+            // Restrict input to numbers only
+            $('#id_due_date').on('keypress', function (event) {
+                const charCode = event.charCode;
+                if ((charCode >= 48 && charCode <= 57) || charCode === 45) {
+                    // Allow numbers (0-9) and '-'
+                    return true;
+                } else {
+                    // Prevent other characters
+                    event.preventDefault();
+                    return false;
+                }
+            });
+
+            // Limit input to numbers only
+            $('id_due_date').on('input', function () {
+                this.value = this.value.replace(/[^0-9\-]/g, '');
+            });
+
+            // Prevent past dates
+            $('#id_due_date').on('change', function () {
+                const selectedDate = new Date(this.value);
+                const currentDate = new Date();
+                if (selectedDate < currentDate) {
+                    alert('Please select a future date');
+                    this.value = '';
+                }
+            });
+        });
+
+        document.addEventListener('DOMContentLoaded', setGreeting);
+    </script>
+    {% block extra_js %}{% endblock %}
 
 </body>
 
