Add public dashboard

--- a/project_tracker/templates/project/dashboard.html
+++ b/project_tracker/templates/project/dashboard.html
@@ -376,7 +376,7 @@
                                 <a class="nav-link" href="{{ dashboard_url }}">Dashboard</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Public Dashboard</a>
+                                <a class="nav-link" href="{{ public_dashboard_url }}">Public Dashboard</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="{{ signout_url }}">Sign Out</a>
